--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@observablehq/framework": "^1.9.0",
-    "d3-dsv": "^3.0.1",
-    "d3-time-format": "^4.1.0"
+    "@observablehq/inputs": "^0.10.6"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
